--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,10 @@
 @import "./base/animations";
 @import "./base/base";
 @import "./base/typography";
+
+// Components 
+@import "./components/buttons";
+@import "./components/input";
+
+// Pages
+@import "./pages/homepage";
