--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -13,6 +13,8 @@
       height: 100%;
       width: 100%;
       
+      background-color: rgb(85, 119, 212);
+
       display: flex;
       justify-content: center;
       align-items: center;
