Styling list of contents

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -1,3 +1,6 @@
 $color-white: white;
+
 $color-primary: rgb(43, 69, 139);
 $color-primary-darken: darken($color-primary, 10%);
+
+$color-secondary: rgb(85, 119, 212);
