Animation to List and Link style

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 // Components 
 @import "./components/buttons";
 @import "./components/input";
+@import "./components/links";
 
 // Pages
 @import "./pages/homepage";
