--- a/src/sass/pages/_homepage.scss
+++ b/src/sass/pages/_homepage.scss
@@ -48,6 +48,9 @@
       align-items: center;
 
       background-color: $color-secondary;
+      overflow: hidden;
+
+      animation: appear 2s forwards;
     }
   }
 }
