--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -4,3 +4,4 @@ $color-primary: rgb(43, 69, 139);
 $color-primary-darken: darken($color-primary, 10%);
 
 $color-secondary: rgb(85, 119, 212);
+$color-secondary-lighten: lighten($color-secondary, 10%);
