--- a/src/sass/pages/_dictionary.scss
+++ b/src/sass/pages/_dictionary.scss
@@ -35,7 +35,7 @@
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 5rem auto;
+    grid-template-rows: auto;
     grid-row-gap: 1rem;
 
     justify-items: center;
@@ -45,6 +45,7 @@
     align-self: flex-start;
   }
 
+  &__item--form,
   &__item {
     width: 100%;
 
@@ -53,5 +54,10 @@
     align-items: center;
 
     background-color: $color-secondary;
+  }
+
+  &__item--form {
+    padding: 1rem;
+    height: 5rem;
   }
 }
