--- a/src/sass/pages/_dictionary.scss
+++ b/src/sass/pages/_dictionary.scss
@@ -60,4 +60,14 @@
     padding: 1rem;
     height: 5rem;
   }
+
+  &__item--error {
+    width: 100%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    background-color: red;
+  }
 }
